/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/3.5/userguide/java_library_plugin.html
 */

apply plugin: 'java-library'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    jcenter()
    mavenLocal()
}

ext {
    buildVersion = '0.1'
    powerMockVersion = "1.6.6"
    spring = "4.3.8.RELEASE"
}

version = buildVersion

dependencies {
    compile 'ch.qos.logback:logback-classic:1+'
    compile 'com.google.guava:guava:21.0'
    compile 'org.apache.commons:commons-lang3:3+'
    compile 'com.google.code.findbugs:jsr305:3.0.1'
    compile 'org.jsoup:jsoup:1.10.2'
    compile "org.springframework:spring-context:${spring}"
    compile "org.springframework:spring-core:${spring}"
    compile 'javax.inject:javax.inject:1'
    compile 'org.aeonbits.owner:owner:1.0.9'

    testCompile 'org.hamcrest:hamcrest-all:1.3'
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-all:1.10.19'
    testCompile "org.powermock:powermock-module-junit4:${powerMockVersion}"
    testCompile("org.powermock:powermock-api-mockito:${powerMockVersion}") {
        exclude group: 'org.hamcrest', module: 'hamcrest-core'
    }
    testCompile "org.springframework:spring-test:${spring}"
}

test {
    useJUnit()
    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
    minHeapSize = '128M'
    maxHeapSize = '256M'
}

task printVersion {
    logger.quiet "Version $buildVersion"
}

task wrapper(type: Wrapper) {
    gradleVersion = '3.5'
}

